syntax = "proto3";

option go_package = "amusing-x.com/charon/charonservice";

package charonservice;

message CategoryListRequest {
  string query = 1;
  int64 page = 2;
  int64 limit = 3;
}

message CategoryListResponse {
  int64 page = 1;
  int64 limit = 2;
  int64 total = 3;
  bool hasNext = 4;
  repeated Category categories = 5;
}

message Category {
  int64 id = 1;
  string name = 2;
  string desc = 3;
}

