syntax = "proto3";

option go_package = "amusing-x.com/charon/charonservice";

package charonservice;

service CharonServ {
  rpc Pong(BlankParams) returns (PongResponse) {}
}

message BlankParams{}

message PongResponse {
  string serverName = 1;
}
