syntax = "proto3";

option go_package = "amusing-x.com/pangu/panguservice";

package panguservice;

import "pangu/category_info.proto";

message CategoryUpdateRequest {
  Category Category = 1;
}

message CategoryUpdateResponse {
  bool Result = 1;
}